[package]
name = "imedge"
version = "0.1.0"
authors = ["Chad Retz <chad.retz@stackpath.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
# default = ["wee_alloc"]

[dependencies]
futures = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1.1"
# Not enabled by default for now
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Headers",
  "Response",
  "ResponseInit",
  "WorkerGlobalScope",
]

[dependencies.image]
version = "0.22"
default-features = false
features = [
  "jpeg",
  "png_codec",
]

[profile.release]
lto = true
opt-level = "s"